Sun Nov  5 17:23:55 2000  Carlos O'Ryan  <coryan@uci.edu>

        * etc/ace.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/tao.doxygen:
        * etc/tao_dynamicany.doxygen:
        * etc/tao_dynamicinterface.doxygen:
        * etc/tao_esf.doxygen:
        * etc/tao_iormanip.doxygen:
        * etc/tao_iortable.doxygen:
        * etc/tao_portableserver.doxygen:
        * etc/tao_rtevent.doxygen:
          Commit doxygen templates, I'm still writing the script to use
          them effectively.

Sun Nov  5 14:37:13 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Make log files world readable, under Solaris they are created
          with 600 mode by default.

Sun Nov  5 14:05:13 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/create_vt_dsps.pl:
        * tests/version_tests/Atomic_Op_Test.dsp:
        * tests/version_tests/Auto_IncDec_Test.dsp:
        * tests/version_tests/Barrier_Test.dsp:
        * tests/version_tests/Basic_Types_Test.dsp:
        * tests/version_tests/Buffer_Stream_Test.dsp:
        * tests/version_tests/CDR_Array_Test.dsp:
        * tests/version_tests/CDR_File_Test.dsp:
        * tests/version_tests/CDR_Test.dsp:
        * tests/version_tests/Cache_Map_Manager_Test.dsp:
        * tests/version_tests/Cached_Accept_Conn_Test.dsp:
        * tests/version_tests/Cached_Conn_Test.dsp:
        * tests/version_tests/Capabilities_Test.dsp:
        * tests/version_tests/Collection_Test.dsp:
        * tests/version_tests/Conn_Test.dsp:
        * tests/version_tests/DLL_Test.dsp:
        * tests/version_tests/DLList_Test.dsp:
        * tests/version_tests/Dynamic_Priority_Test.dsp:
        * tests/version_tests/Enum_Interfaces_Test.dsp:
        * tests/version_tests/Env_Value_Test.dsp:
        * tests/version_tests/Future_Set_Test.dsp:
        * tests/version_tests/Future_Test.dsp:
        * tests/version_tests/Handle_Set_Test.dsp: