@@ -64,8 +64,8 @@ main (int, ACE_TCHAR *[])
   ACE_RMCast_Reassembly_Tester tester;
 
   if (tester.activate (THR_NEW_LWP|THR_JOINABLE, 4) == -1)
-    ACE_ERROR_RETURN ((LM_ERROR, 
-                       ACE_TEXT ("Cannot activate the threads\n")), 
+    ACE_ERROR_RETURN ((LM_ERROR,
+                       ACE_TEXT ("Cannot activate the threads\n")),
                       1);
 
   ACE_Thread_Manager::instance ()->wait ();
@@ -87,7 +87,7 @@ ACE_RMCast_Reassembly_Tester::svc (void)
 {
   for (int iteration = 0; iteration != 50; ++iteration)
     {
-      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%t) iteration %d\n"), iteration));     
+      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%t) iteration %d\n"), iteration));
       ACE_UINT32 sequence_number = this->next_sequence_number ();
       {
         ACE_Message_Block received;
@@ -123,11 +123,10 @@ ACE_RMCast_Reassembly_Tester::svc (void)
             ACE_ERROR_RETURN ((LM_ERROR,
                                ACE_TEXT ("Mismatched big_blob data\n")),
                               -1);
-            return -1;
           }
       }
 
-      ACE_DEBUG ((LM_DEBUG, 
+      ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("(%t) iteration %d, first test passed\n"),
                   iteration));
       sequence_number = this->next_sequence_number ();
@@ -185,10 +184,9 @@ ACE_RMCast_Reassembly_Tester::svc (void)
             ACE_ERROR_RETURN ((LM_ERROR,
                                ACE_TEXT ("Mismatched random big_blob data\n")),
                               -1);
-            return -1;
           }
       }
-      ACE_DEBUG ((LM_DEBUG, 
+      ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("(%t) iteration %d, random test passed\n"),
                   iteration));
     }
